[project]
name = "distributor"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.0",
    "ruff>=0.12.4",
    "sturdy-subnet",
]

[tool.uv.sources]
sturdy-subnet = { git = "https://github.com/Sturdy-Subnet/sturdy-subnet", rev = "6.0.4" }
