[project]
name = "distributor"
version = "0.1.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.0",
    "ruff>=0.12.4",
    "swap-subnet",
]

[tool.uv.sources]
swap-subnet = { git = "https://github.com/Swap-Subnet/swap-subnet", rev = "7.0.1" }
